# sistemas-embutidos

./: Cargo.toml  build.rs  droplet
arduino_code/: sensors.ino  servo.ino
proto/: embutidos.proto
src/: droplet.rs  droplet_server.rs  raspberry.rs  raspberry_server.rs  requests.rs  signatures.rs  util.rs
